min-height for body: fixes cut off bg for tiny pages

--- a/src/assets/app.scss
+++ b/src/assets/app.scss
@@ -50,6 +50,7 @@ body {
     // background-size: 100% 100%;
     animation: gradient 15s linear infinite;
     animation-direction: alternate;
+    min-height: 100vh;
 }
 @keyframes gradient {
     0% {background-position: 0%}
